[package]
name = "appdistribute"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"

[dependencies]
clap = "2.32"
codemap = "0.1"
codemap-diagnostic = "0.1"
glob = "0.3"
slog = "2.4"
starlark = "0.2"
starlark-repl = "0.2"
