[package]
name = "tugger"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/indygreg/tugger"
repository = "https://github.com/indygreg/tugger.git"
readme = "README.md"

[dependencies]
clap = "2.32"
codemap = "0.1"
codemap-diagnostic = "0.1"
fs_extra = "1.1"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
slog = "2.4"
starlark = "0.2"
starlark-repl = "0.2"
tar = "0.4"
tempdir = "0.3"
